Store-service. ISSUE-0. Поправил приколов